@@ -13,8 +13,11 @@ HEAD (today)
 ------------
 
 - libAMoRE: Fixed memory leak in enfa2nfa.c
+- libAMoRE++: Added function get_transitions that returs the transitions as they
+              are stored in the AMoRE structs.
 - libAMoRE++: consider epsilon-transitions in finite_automaton::negative_sink()
-	this fixes recognition of non-sink-states as sink-states in visualize().
+              this fixes recognition of non-sink-states as sink-states in
+              visualize().
 - libAMoRE++: Added copy constructur for NFA and DFA
 - libAMoRE++: Added method to remove epsilon transitions
 - libAMoRE++: Determize does now handle NFA with epsilon transitions correctly
